fixed bug where buttons were getting cut on mobile

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -110,7 +110,7 @@ input {
     background: none;
     color: inherit;
     border: none;
-    padding: 0;
+    padding: 5px;
     font: inherit;
     cursor: pointer;
     outline: inherit;
