--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -112,7 +112,7 @@ input {
   background: none;
   color: inherit;
   border: none;
-  padding: 0;
+  padding: 5px;
   font: inherit;
   cursor: pointer;
   outline: inherit;
